--- a/config.toml
+++ b/config.toml
@@ -15,9 +15,9 @@ home = ["HTML", "RSS", "Algolia"]
 [params]
 header_image = "img/home-bg-jeep.jpg"
 SEOTitle = "DevStream Blog"
-description = "DevStream"
+description = "DevStream: the open-source DevOps toolchain manager (DTM)."
 keyword = "DevStream"
-slogan = "DevStream"
+slogan = "The open-source DevOps toolchain manager (DTM)."
 
 image_404 = "img/404-bg.jpg"
 title_404 = "你来到了没有知识的荒原 :("
@@ -68,16 +68,16 @@ about_me = true
 
 [params.social]
 rss            = true
-email          = "youremail@gmail.com"
+email          = "tao.hu@merico.dev"
 #facebook      = "full profile url in facebook"
 #googleplus    = "full profile url in googleplus"
 #twitter       = "full profile url in twitter"
-linkedin       = "https://www.linkedin.com/in/yourlinkedinid"
-stackoverflow  = "https://stackoverflow.com/users/yourstackoverflowid"
+#linkedin       = "https://www.linkedin.com/in/yourlinkedinid"
+#stackoverflow  = "https://stackoverflow.com/users/yourstackoverflowid"
 #instagram     = "full profile url in instagram"
-github         = "https://github.com/yourgithub"
-wechat         = "your wechat qr code image"
-#medium        = "full profile url in medium"
+github         = "https://github.com/merico-dev/stream"
+#wechat         = "your wechat qr code image"
+medium         = "https://medium.com/devstream"
 #slack         = "full workspace url in slack"
 #pinterest     = "full profile url in pinterest"
 #reddit        = "full profile url in reddit"
@@ -96,13 +96,11 @@ title =  ""
 href =  ""
 
 [[params.addtional_menus]]
-title =  "BOOKS"
-href =  "/top/books/"
-[[params.addtional_menus]]
-title =  "ARCHIVE"
+title =  "ARCHIVE | 博文归档"
 href =  "/top/archive/"
+
 [[params.addtional_menus]]
-title =  "ABOUT"
+title =  "ABOUT | 关于我"
 href =  "/top/about/"
 
 [outputFormats.Algolia]
