fix: base url error
Signed-off-by: Daniel Hu <tao.hu@merico.dev>

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.dtm.dtv"
+baseURL = "https://blog.dtm.dev"
 title = "DevStream Blog"
 theme = "hugo-theme-cleanwhite"
 languageCode = "en-us"
