--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ algolia_apiKey = ""
 
 # Sidebar settings
 sidebar_about_description = "DevStream: the open-source DevOps toolchain manager (DTM)."
-#sidebar_avatar = "img/avatar-zhaohuabing.jpg"      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar_avatar = "img/logo-D.png"      # use absolute URL, seeing it's used in both `/` and `/about/`
 sidebar_avatar = ""      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 featured_tags = true
