--- a/config.toml
+++ b/config.toml
@@ -13,94 +13,94 @@ hasCJKLanguage = true
 home = ["HTML", "RSS", "Algolia"]
 
 [params]
-header_image = "img/home-bg.jpg"
-SEOTitle = "DevStream Blog"
-description = "DevStream: the open-source DevOps toolchain manager (DTM)."
-keyword = "DevStream"
-slogan = "The open-source DevOps toolchain manager (DTM)."
+  header_image = "img/home-bg.jpg"
+  SEOTitle = "DevStream Blog"
+  description = "DevStream: the open-source DevOps toolchain manager (DTM)."
+  keyword = "DevStream"
+  slogan = "The open-source DevOps toolchain manager (DTM)."
 
-image_404 = "img/404-bg.jpg"
-title_404 = "你来到了没有知识的荒原 :("
-omit_categories = false
+  image_404 = "img/404-bg.jpg"
+  title_404 = "你来到了没有知识的荒原 :("
+  omit_categories = false
 
-# leancloud storage for page view counter
-page_view_conter = false
-leancloud_app_id = ""
-leancloud_app_key = ""
+  # leancloud storage for page view counter
+  page_view_conter = false
+  leancloud_app_id = ""
+  leancloud_app_key = ""
 
-# algolia site search
-algolia_search = true
-algolia_appId = ""
-algolia_indexName = ""
-algolia_apiKey = ""
+  # algolia site search
+  algolia_search = true
+  algolia_appId = ""
+  algolia_indexName = ""
+  algolia_apiKey = ""
 
-# Sidebar settings
-sidebar_about_description = "DevStream: the open-source DevOps toolchain manager (DTM)."
-sidebar_avatar = "img/logo-D.png"      # use absolute URL, seeing it's used in both `/` and `/about/`
+  # Sidebar settings
+  sidebar_about_description = "DevStream: the open-source DevOps toolchain manager (DTM)."
+  sidebar_avatar = "img/logo-D.png"      # use absolute URL, seeing it's used in both `/` and `/about/`
 
-featured_tags = true
-featured_condition_size = 1
+  featured_tags = true
+  featured_condition_size = 1
 
-# Baidu Analytics
-ba_track_id = ""
+  # Baidu Analytics
+  ba_track_id = ""
 
-# We need a proxy to access Disqus api in China
-# Follow https://github.com/zhaohuabing/disqus-php-api to set up your own disqus proxy
-disqus_proxy = ""
-disqus_site = ""
+  # We need a proxy to access Disqus api in China
+  # Follow https://github.com/zhaohuabing/disqus-php-api to set up your own disqus proxy
+  disqus_proxy = ""
+  disqus_site = ""
 
-# Twikoo comments
-# Follow https://twikoo.js.org/ to set up your own env_id
-twikoo_env_id = ""
+  # Twikoo comments
+  # Follow https://twikoo.js.org/ to set up your own env_id
+  twikoo_env_id = ""
 
-#Enable wechat pay & alipay to allow readers send reward money if they like the articles
-reward = false
-# reward_guide = "如果这篇文章对你有用,请随意打赏"
+  #Enable wechat pay & alipay to allow readers send reward money if they like the articles
+  reward = false
+  # reward_guide = "如果这篇文章对你有用,请随意打赏"
 
-friends = false
-bookmarks = false
-about_me = true
+  friends = false
+  bookmarks = false
+  about_me = true
 
-# Include any custom CSS and/or JS files, url or relative to /static folder
-#custom_css = ["css/lightbox.css", "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css", "css/main.css"]
-#custom_js = ["js/lightbox.js", "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js", "js/main.js"]
+  # Include any custom CSS and/or JS files, url or relative to /static folder
+  #custom_css = ["css/lightbox.css", "https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css", "css/main.css"]
+  #custom_js = ["js/lightbox.js", "https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js", "js/main.js"]
 
-[params.social]
-rss            = true
-email          = "tao.hu@merico.dev"
-#facebook      = "full profile url in facebook"
-#googleplus    = "full profile url in googleplus"
-#twitter       = "full profile url in twitter"
-#linkedin       = "https://www.linkedin.com/in/yourlinkedinid"
-#stackoverflow  = "https://stackoverflow.com/users/yourstackoverflowid"
-#instagram     = "full profile url in instagram"
-github         = "https://github.com/merico-dev/stream"
-#wechat         = "your wechat qr code image"
-medium         = "https://medium.com/devstream"
-#slack         = "full workspace url in slack"
-#pinterest     = "full profile url in pinterest"
-#reddit        = "full profile url in reddit"
-#gitlab        = "full profile url in gitlab"
-#mastodon      = "full profile url in mastodon"
-#keybase       = "full profile url in keybase"
-#xing          = "https://www.xing.com/profile/yourxingid"
-#git           = "full profile url for git user"
+  [params.social]
+  rss            = true
+  email          = "tao.hu@merico.dev"
+  #facebook      = "full profile url in facebook"
+  #googleplus    = "full profile url in googleplus"
+  #twitter       = "full profile url in twitter"
+  #linkedin       = "https://www.linkedin.com/in/yourlinkedinid"
+  #stackoverflow  = "https://stackoverflow.com/users/yourstackoverflowid"
+  #instagram     = "full profile url in instagram"
+  github         = "https://github.com/merico-dev/stream"
+  wechat         = "img/qrcode_258.jpg"
+  medium         = "https://medium.com/devstream"
+  #slack         = "full workspace url in slack"
+  #pinterest     = "full profile url in pinterest"
+  #reddit        = "full profile url in reddit"
+  #gitlab        = "full profile url in gitlab"
+  #mastodon      = "full profile url in mastodon"
+  #keybase       = "full profile url in keybase"
+  #xing          = "https://www.xing.com/profile/yourxingid"
+  #git           = "full profile url for git user"
 
-[[params.friend_link]]
-title = ""
-href =  ""
+  [[params.friend_link]]
+  title = ""
+  href =  ""
 
-[[params.bookmark_link]]
-title =  ""
-href =  ""
+  [[params.bookmark_link]]
+  title =  ""
+  href =  ""
 
-[[params.addtional_menus]]
-title =  "ARCHIVE | 博文归档"
-href =  "/top/archive/"
+  [[params.addtional_menus]]
+  title =  "ARCHIVE | 博文归档"
+  href =  "/top/archive/"
 
-[[params.addtional_menus]]
-title =  "ABOUT | 关于我"
-href =  "/top/about/"
+  [[params.addtional_menus]]
+  title =  "ABOUT | 关于我"
+  href =  "/top/about/"
 
 [outputFormats.Algolia]
 baseName = "algolia"
