--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Deploy 🚀
         uses: benmatselby/hugo-deploy-gh-pages@master
         env:
+          HUGO_EXTENDED: true
           GITHUB_ACTOR: daniel-hutao
           TARGET_REPO: devstream-io/blog.github.io
           TARGET_BRANCH: main
