--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: 'recursive'
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - run: npm install postcss-cli
       - name: Deploy 🚀
         uses: benmatselby/hugo-deploy-gh-pages@master
         env:
