fix: deploy to .

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,6 +35,7 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.TOKEN }}
           REPOSITORY_NAME: devstream-io/blog.github.io
           BRANCH: main # The branch the action should deploy to.
+          FOLDER: . # The folder the action should deploy.
           clean: true
           clean-exclude: |
             CNAME
