--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,10 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
-          ACCESS_TOKEN: ${{ secrets.TOKEN }}
-          REPOSITORY_NAME: devstream-io/blog.github.io
-          BRANCH: main # The branch the action should deploy to.
-          FOLDER: . # The folder the action should deploy.
+          token: ${{ secrets.TOKEN }}
+          repository-name: devstream-io/blog.github.io
+          branch: main # The branch the action should deploy to.
+          folder: . # The folder the action should deploy.
           clean: true
           clean-exclude: |
             CNAME
