--- a/config.toml
+++ b/config.toml
@@ -101,7 +101,7 @@ section = ["HTML", "print", "RSS"]
 
 [params]
 copyright = "DevStream Community"
-privacy_policy = "https://policies.google.com/privacy"
+privacy_policy = "https://xxx"
 
 # First one is picked as the Twitter card image if not set on page.
 # images = ["images/project-illustration.png"]
