--- a/config.toml
+++ b/config.toml
@@ -97,7 +97,7 @@ time_format_blog = "02.01.2006"
 
 # Comment out if you don't want the "print entire section" link enabled.
 [outputs]
-section = ["HTML", "print", "RSS"]
+section = ["HTML", "RSS"]
 
 [params]
 copyright = "DevStream Community"
